--- a/Миграции.md
+++ b/Миграции.md
@@ -2,4 +2,5 @@
 docker compose build
 docker compose up -d
 Выполнить миграции:
+docker-compose exec app alembic revision --autogenerate -m "init"
 docker-compose exec app alembic upgrade head
